--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <button id='<3' > ❤️ </button>
   <button id='pause' > pause </button>
 
-  <ul class='likes'></ul>
+  <ul id='likes' class='likes'></ul>
 
   <div>
     <h3>Comments</h3>
@@ -32,14 +32,14 @@
     <h3>Leave a comment</h3>
 
     <form id="comment-form" action="">
-      <input type='text' name="" id="" cols="30" rows="10">
+      <input type='text' name="" id="textbox" cols="30" rows="10">
       </br>
       <button id='submit'>submit</button>
     </form>
 
   </div>
 
-  <script src="index.min.js"></script>
+  <!-- <script src="index.min.js"></script> -->
   <script src="challenge.js"></script>
 </body>
 </html>
